# stemforge

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  tox.ini
src/stemforge/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  pipeline.py
src/stemforge/capture/: monitor.py  recorder.py
src/stemforge/midi/: converter.py
src/stemforge/separation/: separator.py
src/stemforge/spotify/: client.py  models.py
src/stemforge/utils/: fs.py  logging.py
tests/: conftest.py  test_config.py  test_fs.py  test_midi_converter.py  test_monitor.py  test_pipeline.py  test_recorder.py  test_spotify_client.py  test_spotify_models.py
